prodMetadata/src/objects/Application__c.object
<CustomObject>
    <description>To capture applications for job openings, internships, and volunteer opportunities</description>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if staff has completed onboarding</description>
        <inlineHelpText>Check if staff has completed onboarding</inlineHelpText>
        <label>Completed Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consider_for_Future_Openings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this for applications that should be in the pipeline</inlineHelpText>
        <label>Consider for Future Openings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convicted_of_a_Felony__c</fullName>
        <label>Convicted of a Felony</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conviction_Details__c</fullName>
        <label>Conviction Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>The division that the job falls under.</description>
        <inlineHelpText>The division that the job falls under.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Long_Term_Goals__c</fullName>
        <label>Long-Term Goals</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Screen_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if phone screen is completed</inlineHelpText>
        <label>Phone Screen Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Position Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Notes__c</fullName>
        <label>Progress Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Applying__c</fullName>
        <label>Reason for Applying</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <label>References</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Referred By)</relationshipLabel>
        <relationshipName>Applications_Referred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejection Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relevant_Experience__c</fullName>
        <label>Relevant Experience</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salary_History__c</fullName>
        <label>Salary History</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salary_Requirements__c</fullName>
        <label>Salary Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Answer to the question: How did you here about this opportunity?</description>
        <inlineHelpText>Answer to the question: How did you here about this opportunity?</inlineHelpText>
        <label>Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interviewed by HC – rejected</fullName>
                </value>
                <value>
                    <fullName>Interviewed by hiring manager/other – rejected</fullName>
                </value>
                <value>
                    <fullName>Interviews in progress</fullName>
                </value>
                <value>
                    <fullName>Not Yet Reviewed</fullName>
                </value>
                <value>
                    <fullName>Offer extended – accepted</fullName>
                </value>
                <value>
                    <fullName>Offer extended – declined</fullName>
                </value>
                <value>
                    <fullName>Pipeline Hold</fullName>
                </value>
                <value>
                    <fullName>Pipeline Outreach</fullName>
                </value>
                <value>
                    <fullName>Position Eliminated</fullName>
                </value>
                <value>
                    <fullName>Rejected - Reviewed Resume - No Interview (HC)</fullName>
                </value>
                <value>
                    <fullName>Rejected - Reviewed Resume - No Interview (Hiring Manager)</fullName>
                </value>
                <value>
                    <fullName>Submitted to hiring manager</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <label>Type of Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Veteran_Member__c</fullName>
        <description>Veteran Member field from Contact record</description>
        <formula>Applicant__r.Veteran_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Veteran Member field from Contact record</inlineHelpText>
        <label>Veteran</label>
        <type>Checkbox</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Referred_By__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>Stage__c</columns>
        <columns>Position__c</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>HumanCapital</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Applications_not_Intern_Job_Volunteer</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Type_of_Application__c</columns>
        <columns>Position__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Application__c</field>
            <operation>notEqual</operation>
            <value>Internship,Job,Volunteer</value>
        </filters>
        <filters>
            <field>Position__c</field>
            <operation>notContain</operation>
            <value>intern</value>
        </filters>
        <label>Applications not Intern/Job/Volunteer</label>
    </listViews>
    <listViews>
        <fullName>Internship_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Position__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>Rejection_Sent__c</columns>
        <columns>Referred_By__c</columns>
        <columns>Consider_for_Future_Openings__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Application__c</field>
            <operation>equals</operation>
            <value>Internship</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>rejected</value>
        </filters>
        <label>Internship Applications</label>
    </listViews>
    <listViews>
        <fullName>Job_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Position__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Rejection_Sent__c</columns>
        <columns>Referred_By__c</columns>
        <columns>Consider_for_Future_Openings__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Application__c</field>
            <operation>equals</operation>
            <value>Job</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>rejected</value>
        </filters>
        <filters>
            <field>Consider_for_Future_Openings__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Position_Filled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Completed_Onboarding__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Job Applications</label>
    </listViews>
    <listViews>
        <fullName>Pipeline_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Position__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>Rejection_Sent__c</columns>
        <columns>Referred_By__c</columns>
        <columns>Consider_for_Future_Openings__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consider_for_Future_Openings__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pipeline Applications</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>Position__c</columns>
        <columns>Referred_By__c</columns>
        <columns>Rejection_Sent__c</columns>
        <columns>Consider_for_Future_Openings__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>rejected</value>
        </filters>
        <label>Rejected Applications</label>
    </listViews>
    <listViews>
        <fullName>Staff_that_Completed_Onbarding</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Completed_Onboarding__c</columns>
        <columns>Type_of_Application__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed_Onboarding__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Staff that Completed Onbarding</label>
    </listViews>
    <listViews>
        <fullName>Veteran_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>Rejection_Sent__c</columns>
        <columns>Consider_for_Future_Openings__c</columns>
        <columns>Type_of_Application__c</columns>
        <columns>Position__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Veteran_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Veteran Applications</label>
    </listViews>
    <listViews>
        <fullName>Volunteer_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Veteran_Member__c</columns>
        <columns>Position__c</columns>
        <columns>Referred_By__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Application__c</field>
            <operation>equals</operation>
            <value>Volunteer</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>rejected</value>
        </filters>
        <label>Volunteer Applications</label>
    </listViews>
    <nameField>
        <displayFormat>App-{00000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>